--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 AWS_ACCESS_KEY_ID=your_access_key
 AWS_SECRET_ACCESS_KEY=your_secret_key
 AWS_REGION=your_region
+
+DATABASE_HOST=localhost
+DATABASE_PORT=3306
+DATABASE_NAME=my_database
+DATABASE_USERNAME=root
+DATABASE_PASSWORD=
